// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Context matches snapshot 1`] = `
<ContextConsumer>
  provided
</ContextConsumer>
`;

exports[`Context matches snapshot as children 1`] = `
<TestWrapper>
  <div>
    <Context.Provider
      value="provided"
    >
      <ContextConsumer />
    </Context.Provider>
  </div>
</TestWrapper>
`;

exports[`ContextProvider matches snapshot 1`] = `
<ContextProvider>
  <ContextConsumer />
</ContextProvider>
`;

exports[`ContextProvider matches snapshot as children 1`] = `
<TestWrapper>
  <div>
    <ContextProvider>
      <ContextConsumer />
    </ContextProvider>
  </div>
</TestWrapper>
`;

exports[`NamedContext matches snapshot 1`] = `
<NamedContextConsumer>
  provided
</NamedContextConsumer>
`;

exports[`NamedContext matches snapshot as children 1`] = `
<TestWrapper>
  <div>
    <NamedContextDisplayName.Provider
      value="provided"
    >
      <NamedContextConsumer />
    </NamedContextDisplayName.Provider>
  </div>
</TestWrapper>
`;

exports[`NamedContextProvider matches snapshot 1`] = `
<NamedContextProvider>
  <NamedContextConsumer />
</NamedContextProvider>
`;

exports[`NamedContextProvider matches snapshot as children 1`] = `
<TestWrapper>
  <div>
    <NamedContextProvider>
      <NamedContextConsumer />
    </NamedContextProvider>
  </div>
</TestWrapper>
`;
